fix buttom on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -477,6 +477,8 @@ nav .search-popup button[type='submit'] {
       margin-top: 10px;
       right: 0;
       bottom: 0;
+      top: auto;
+      transform: none;
     }
 }
 
